[package]
name = "corrupted_clock"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
thiserror.workspace = true
serde_json.workspace = true
chrono.workspace = true

dirs = "5.0.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
corrupted_clock_util = {path = "../corrupted_clock_util"}
log = "0.4.21"
env_logger = "0.11.3"
prettytable-rs = "0.10.0"

[dev-dependencies]
insta.workspace = true
