[package]
name = "corrupted_clock_util"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
 
chrono = { version = "0.4.38", features = ["serde"] } 
serde = { version = "1.0.199", features = ["derive"] } 
regex = "1.10.4"
once_cell = "1.19.0"

[dev-dependencies]
insta = { version = "1.38.0", features = ["json"] }
pretty_assertions = "1.4.0"
