[package]
name = "corrupted_clock_util"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
chrono.workspace = true
 
serde = { version = "1.0.199", features = ["derive"] } 
regex = "1.10.4"
once_cell = "1.19.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
insta.workspace = true
